# LiveTranslator

./: .gitignore  README.md  main.py  pyproject.toml  verify_functional.py
.superpowers/brainstorm/77128-1780846527/content/: layout-1-2.html  layout-detailed.html  layout-redesign.html
.superpowers/brainstorm/77128-1780846527/state/: server-stopped
docs/: qwen_asr_realtime_reference.md
docs/superpowers/plans/: 2026-06-06-litellm-translate-service.md  2026-06-06-live-translator-implementation.md  2026-06-07-qwen-asr-realtime-service.md  2026-06-07-qwen-asr-sentence-final.md  2026-06-07-subtitle-toggle.md  2026-06-07-translation-overlay-plan.md  2026-06-21-soundcard-capture.md
docs/superpowers/specs/: 2026-06-06-litellm-translate-service-design.md  2026-06-06-live-translator-design.md  2026-06-07-qwen-asr-realtime-service-design.md  2026-06-07-qwen-asr-sentence-final-design.md  2026-06-07-translation-overlay-design.md  2026-06-21-soundcard-capture-design.md
live_translator/: __init__.py
live_translator/audio/: __init__.py  soundcard_source.py  source.py  system_monitor.py  virtual_speaker.py
live_translator/config/: __init__.py  manager.py
live_translator/gui/: __init__.py  app.py  config_form.py  main_window.py  subtitle_window.py  translation_overlay.py  tray_icon.py
live_translator/pipeline/: __init__.py  events.py  scheduler.py
live_translator/services/: __init__.py  asr.py  context.py  deepl_translate.py  litellm_translate.py  openai_realtime.py  qwen_asr.py  registry.py  translator.py
tests/test_audio/: test_soundcard_source.py  test_source.py  test_virtual_speaker.py
tests/test_config/: test_manager.py  test_virtual_speaker_config.py
tests/test_gui/: conftest.py  test_config_form.py  test_main_window.py  test_output_device.py  test_subtitle_window.py  test_translation_overlay.py  test_tray_icon.py
tests/test_pipeline/: test_scheduler.py
tests/test_services/: test_context.py  test_deepl_translate.py  test_litellm_translate.py  test_openai_realtime.py  test_qwen_asr.py  test_registry.py
