[project]
name = "live-translator"
version = "0.1.0"
description = "同声传译实时语音翻译应用"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=9.0.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D212",
    "D213",
    "D404",
    "ANN401",
    "PLR0913",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "PLR2004",
    "S311",
    "S101",
    "COM812",
    "ISC001",
]
unfixable = ["FIX002", "TD003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "D", "PLR2004"]
"__init__.py" = ["D", "ANN", "F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
strict_equality = true
no_implicit_reexport = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-iterable"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]

