[project]
name = "live-translator"
version = "0.1.0"
description = "同声传译实时语音翻译应用"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.87.1",
    "numpy>=2.4.6",
    "pyside6>=6.11.1",
    "requests>=2.34.2",
    "sounddevice>=0.5.5",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=9.0.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D212",
    "D213",
    "D404",
    "ANN401",
    "PLR0913",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "PLR2004",
    "S311",
    "S101",
    "COM812",
    "ISC001",
]
unfixable = ["FIX002", "TD003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "D", "PLR2004", "SLF001", "RUF012", "F401", "ARG", "TC002"]
"verify_functional.py" = ["ALL"]
"__init__.py" = ["D", "ANN", "F401"]
"live_translator/gui/app.py" = ["SLF001", "PLC0415", "ARG002", "TC003", "TC001", "PLW0108"]
"live_translator/services/openai_realtime.py" = ["PLC0415", "TC003", "TC001", "BLE001", "S110", "TRY003", "EM101", "SIM105", "C901"]
"live_translator/services/deepl_translate.py" = ["PLC0415", "TC003", "TRY003", "EM101"]
"live_translator/audio/source.py" = ["TC003"]
"live_translator/audio/system_monitor.py" = ["TC003", "BLE001", "S110"]
"live_translator/config/manager.py" = ["TC003", "TC001", "TRY003", "EM101"]
"live_translator/gui/main_window.py" = ["TC003", "TC001"]
"live_translator/gui/config_form.py" = ["C901", "PLW0108"]
"live_translator/gui/subtitle_window.py" = ["N802", "BLE001", "S110"]
"live_translator/pipeline/scheduler.py" = ["TC003", "TC001", "BLE001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
strict_equality = true
no_implicit_reexport = true
enable_error_code = ["ignore-without-code", "truthy-iterable"]

[[tool.mypy.overrides]]
module = "live_translator.services.*"
disallow_any_explicit = false
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = "live_translator.config.*"
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "live_translator.gui.*"
disallow_any_explicit = false
disallow_any_unimported = false
disallow_any_expr = false

[[tool.mypy.overrides]]
module = "live_translator.gui.config_form"
ignore_errors = true

[[tool.mypy.overrides]]
module = "live_translator.audio.system_monitor"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [".*"]

"main.py" = ["PLC0415"]
"tests/test_audio/test_source.py" = ["PLC0415"]
